migrate: Java Swing to JavaFX